# nixos

./: .Bashrc  .editorconfig  .gitignore  Bootstrap.sh  License  Makefile  Readme.md  flake.nix
.doc/: Bash.md  Generate.sh  Navigation.md  Nvim.md
android/: Environment.nix  Git.nix  Nix.nix  Package.nix  Style.nix  Termux.nix  default.nix
config/: Setting.nix  Style.nix  Stylix.nix  Wallpaper.nix
container/: Change.nix  Cloud.nix  Ddns.nix  Dns.nix  Download.nix  Fsight.nix  Git.nix  Hdd.nix  Home.nix  Iot.nix  Jobber.nix  Mail.nix  Office.nix  Paper.nix  Pass.nix  Paste.nix  Photoprocess.nix  Postgres.nix  Print.nix  Proxy.nix  Rabbitmq.nix  Read.nix  Redis.nix  Search.nix  Status.nix  Stock.nix  Vpn.nix  Watch.nix  Yt.nix  Zapret.nix  default.nix
home/: Android.nix  HomeManager.nix  NixOs.nix
lib/: Container.nix  Util.nix
module/: AmdCompute.nix  AmdCpu.nix  AmdGpu.nix  App.nix  AutoUpdateSigned.nix  Bash.nix  Bootloader.nix  Brightness.nix  CapsToggle.nix  Crypto.nix  Desktop.nix  Distrobox.nix  Docker.nix  DockerRootless.nix  Filesystem.nix  Firewall.nix  Flatpak.nix  Font.nix  Ftpd.nix  Gnome.nix  IntelCpu.nix  Kernel.nix  Keyd.nix  Ld.nix  Locale.nix  Network.nix  Nix.nix  NixOnDroid.nix  NixServe.nix  Ollama.nix  Package.nix  Podman.nix  Polkit.nix  Portal.nix  Powerlimit.nix  PowerlimitThinkpad.nix  Powersave.nix  PowersaveAmd.nix  PowersaveIntel.nix  Print.nix  (+14 more)
overlay/: ChangedetectionIo.nix  Example.nix  Keyd.nix  Nix.nix  YtDlp.nix
package/: default.nix
package/jobber/project/: pyproject.toml
part/: Key.nix  Secret.nix  Setting.nix  Util.nix  (+2 more)
(+664 files in other folders)
