[tool.poetry]
name = "jobber"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.4.3"

[tool.poetry.scripts]
jobber = "jobber:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
